<resources>
    <string name="app_name">FMatic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pilotos">Pilotos</string>
    <string name="menu_circuitos">Circuitos</string>
    <string name="menu_temporadas">Calendario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_login">Login</string>
    <string name="your_web_client_id">client</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_teams">Escuderia</string>
    <string name="menu_hall">Hall Of Fame</string>
    <string name="perfs_file">net.azarquiel.fmatic.PREFERENCE_FILE_KEY</string>
</resources>