<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="Login">
        <menu>
            <group
                android:id="@+id/grpLogin"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

    <item android:title="Contenido">
        <menu>
        <group
            android:id="@+id/grpContent"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_hall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_hall"
                android:title="@string/menu_hall" />
            <item
                android:id="@+id/nav_teams"
                android:icon="@drawable/ic_teams"
                android:title="@string/menu_teams" />
            <item
                android:id="@+id/nav_drivers"
                android:icon="@drawable/ic_pilotos"
                android:title="@string/menu_pilotos" />
            <item
                android:id="@+id/nav_seasons"
                android:icon="@drawable/ic_temporadas"
                android:title="@string/menu_temporadas" />
        </group>
        </menu>
    </item>


</menu>